# isearch

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  mypy.ini  pyproject.toml  requirements.txt  sachin__GTK4_setup.md
docs/: ADVANCED_MEDIA_DEDUPLICATION.md  README.md  day1_project_recap.md
docs/day1/: day1_project_setup.md  day1_sachin__claude_prompts.md
docs/day2/: day2_database_implementation.md
docs/day3/: day3_development_plan.md
docs/wireframes_html/: file_organizer_wireframes_v1.html  file_organizer_wireframes_v4.html
scripts/: run_tests.py  setup_dev.py
src/isearch/: main.py
src/isearch/core/: database.py  duplicate_detector.py  file_scanner.py  search_engine.py
src/isearch/ui/: config_dialog.py  duplicate_window.py  main_window.py
src/isearch/utils/: config_manager.py  constants.py  file_utils.py
testdata/: README.md
testdata/streamlined_scenarios/: README.md  USAGE_GUIDE.md
testdata/streamlined_scenarios/travel_landmarks/: EXPECTED_RESULT.md
testdata/test1_basic_duplicates/backup/: vacation_photo.txt
testdata/test3_mixed_files/documents/: meeting_notes.txt  project_notes.txt
testdata/test4_large_collection/documents/personal/: personal_1.txt  personal_10.txt  personal_2.txt  personal_3.txt  personal_4.txt  personal_5.txt  personal_6.txt  personal_7.txt  personal_8.txt  personal_9.txt
testdata/test4_large_collection/documents/work/: document_1.txt  document_10.txt  document_2.txt  document_3.txt  document_4.txt  document_5.txt  document_6.txt  document_7.txt  document_8.txt  document_9.txt  final_report.txt  report_final.txt  report_final_v2.txt
tests/unit/: test_database.py  test_file_scanner.py  test_search_engine.py
